k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: iam-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: iam
  template:
    metadata:
      labels:
        app: iam
    spec:
      containers:
      - name: iam
        image: suender/iam:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8000
