k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: iam-service
spec:
  selector:
    app: iam
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8000
