k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: iam-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/proxy-read-timeout: "300"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
  - hosts:
    - iam.local
    secretName: iam-tls
  rules:
  - host: iam.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: iam-service
            port:
              number: 80
